# Greenhouse

./: .gitignore  ARCHITECTURE.md  CHANGES_LOG.txt  CLAUDE.md  COMPLETION_SUMMARY.md  CRITICAL_FIX_APPLIED.txt  DYNAMICS_FIX.md  Dockerfile  FILE_MANIFEST.md  FIX_SUMMARY.md  FRONTEND.md  LICENSE  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.backup.md  README.md  SESSION_SUMMARY.md  START_HERE.txt  app.py  inference.py  openenv.yaml  ps.txt  pyproject.toml  requirements.txt  run_frontend.bat  run_frontend.ps1  test_dynamics.py
api/: server.py
config/: constants.py  crop_profiles.py
env/: actions.py  dynamics.py  environment.py  models.py  rewards.py  state.py  utils.py
scripts/: validate-submission.sh  validate_submission.py  verify_ps_alignment.py
server/: app.py
tasks/: graders.py  task_easy.py  task_hard.py  task_medium.py
