[project]
name = "greenhouse-openenv"
version = "0.1.0"
description = "Greenhouse climate control OpenEnv environment"
authors = [{ name = "xDaksh" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "api*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"